Bugfix for sidebar z-index

--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -914,6 +914,7 @@ video.qr-preview {
 }
 
 .sidebar {
+  position: relative;
   float: right;
   overflow: hidden;
   transition: width .5s;
